documentando com swagger (não funcionando)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=senha123
 spring.flyway.enabled=true
 
 spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
