--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.flyway.enabled=true
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+webservices.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
+webservices.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
+webservices.raspay.v1.order=${RASPAY_ORDER:/v1/order}
+webservices.raspay.v1.payment=${RASPAY_PAYMENT:/v1/payment/credit-card/}
