--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
