--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,14 @@ spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rvneto.testapi@gmail.com
+spring.mail.password=ibbr scbg wvaq idos
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 webservices.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
 webservices.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
 webservices.raspay.v1.order=${RASPAY_ORDER:/v1/order}
