--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
             <version>3.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
